Fixing mobile form overflow bug

--- a/public/src/app/main-content/main-content.component.css
+++ b/public/src/app/main-content/main-content.component.css
@@ -436,7 +436,8 @@ input {
   padding: 5%;
   width: 80vw;
   height: 80vh;
-  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: scroll;
 }
 
 .modal {
